Now blurring only happens in the background when small navbar is opened, navbar has now a gradient background - Resolves #39

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,11 +53,6 @@ html.no-scroll, body.no-scroll {
   overflow: hidden;
 }
 
-.backdrop-blur-lg {
-  -webkit-backdrop-filter: blur(16px);
-  backdrop-filter: blur(16px);
-}
-
 .code-themed {
   font-family: 'Courier New', Courier, monospace;
   background-color: #343434;
